--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nama Syarikat - Company Profile</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
@@ -36,37 +36,43 @@
     </p>
   </section>
 
-  <!-- Product Highlights -->
+  <!-- Product Section (Now inside index.html) -->
   <section id="products" class="bg-gray-100 py-16">
     <div class="max-w-6xl mx-auto px-6">
-      <h3 class="text-3xl font-bold text-center mb-10">Produk Pilihan</h3>
-      <div class="grid md:grid-cols-3 gap-8">
-        <!-- Product 1 -->
-        <div class="bg-white rounded-lg shadow p-6 text-center">
-          <img src="https://via.placeholder.com/150" alt="Produk 1" class="mx-auto mb-4">
-          <h4 class="text-xl font-bold mb-2">Nama Produk 1</h4>
-          <p class="text-gray-600">Deskripsi ringkas produk.</p>
+      <h3 class="text-3xl font-bold text-center mb-10">Senarai Produk</h3>
+      <div class="grid gap-8 md:grid-cols-3">
+
+        <!-- Product Card 1 -->
+        <div class="bg-white shadow rounded-lg p-4 text-center">
+          <img src="https://via.placeholder.com/200" alt="Produk 1" class="mx-auto mb-4 rounded">
+          <h4 class="text-xl font-bold mb-2">Produk 1</h4>
+          <p class="text-gray-700 mb-2">RM 59.00</p>
+          <a href="#" class="bg-blue-700 text-white px-4 py-2 rounded hover:bg-blue-600">Lihat Produk</a>
         </div>
-        <!-- Product 2 -->
-        <div class="bg-white rounded-lg shadow p-6 text-center">
-          <img src="https://via.placeholder.com/150" alt="Produk 2" class="mx-auto mb-4">
-          <h4 class="text-xl font-bold mb-2">Nama Produk 2</h4>
-          <p class="text-gray-600">Deskripsi ringkas produk.</p>
+
+        <!-- Product Card 2 -->
+        <div class="bg-white shadow rounded-lg p-4 text-center">
+          <img src="https://via.placeholder.com/200" alt="Produk 2" class="mx-auto mb-4 rounded">
+          <h4 class="text-xl font-bold mb-2">Produk 2</h4>
+          <p class="text-gray-700 mb-2">RM 79.00</p>
+          <a href="#" class="bg-blue-700 text-white px-4 py-2 rounded hover:bg-blue-600">Lihat Produk</a>
         </div>
-        <!-- Product 3 -->
-        <div class="bg-white rounded-lg shadow p-6 text-center">
-          <img src="https://via.placeholder.com/150" alt="Produk 3" class="mx-auto mb-4">
-          <h4 class="text-xl font-bold mb-2">Nama Produk 3</h4>
-          <p class="text-gray-600">Deskripsi ringkas produk.</p>
+
+        <!-- Product Card 3 -->
+        <div class="bg-white shadow rounded-lg p-4 text-center">
+          <img src="https://via.placeholder.com/200" alt="Produk 3" class="mx-auto mb-4 rounded">
+          <h4 class="text-xl font-bold mb-2">Produk 3</h4>
+          <p class="text-gray-700 mb-2">RM 99.00</p>
+          <a href="#" class="bg-blue-700 text-white px-4 py-2 rounded hover:bg-blue-600">Lihat Produk</a>
         </div>
-      </div>
-      <div class="text-center mt-10">
-        <a href="#" class="text-blue-700 font-semibold hover:underline">Lihat Semua Produk →</a>
+
+        <!-- Tambah produk ikut keperluan anda -->
+
       </div>
     </div>
   </section>
 
-  <!-- Contact / CTA -->
+  <!-- Contact Section -->
   <section id="contact" class="py-16 max-w-3xl mx-auto px-6 text-center">
     <h3 class="text-3xl font-bold mb-4">Hubungi Kami</h3>
     <p class="text-lg mb-6 text-gray-700">Untuk pertanyaan atau maklumat lanjut, sila hubungi kami melalui emel atau telefon.</p>
